layout issues fixed

--- a/style.css
+++ b/style.css
@@ -201,7 +201,7 @@ nav {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 9999;
+  z-index: 99999;
   pointer-events: none;
   mix-blend-mode: difference;
   background-color: whitesmoke;
@@ -494,9 +494,46 @@ nav {
   top: 33%;
   left: 50%;
   transform: translate(-50%, -50%);
+  will-change: transform;
 }
 
 #page3-img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+#page3-img-2 {
+  width: 48vw;
+  height: 135vh;
+  overflow: hidden;
+  pointer-events: none;
+  position: absolute;
+  top: 68%;
+  left: 1.5%;
+  transform: translateY(-50%);
+  will-change: transform;
+}
+
+#page3-img-2 img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+#page3-img-3 {
+  width: 48vw;
+  height: 135vh;
+  overflow: hidden;
+  pointer-events: none;
+  position: absolute;
+  top: 68%;
+  right: 1.5%;
+  transform: translateY(-50%);
+  will-change: transform;
+}
+
+#page3-img-3 img {
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -514,42 +551,6 @@ nav {
   white-space: nowrap;
   text-transform: capitalize;
   will-change: transform;
-}
-
-#page3-slider-1{
-  position: absolute;
-  top: 58%;
-  left: -50%;
-  transform: translateY(-50%);
-  font-family: myFont2;
-  pointer-events: none;
-  color: white;
-  font-size: 8vw;
-  white-space: nowrap;
-  text-transform: capitalize;
-}
-#page3-slider-line{
-  position: absolute;
-  top: 61%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 85%;
-  height: 1vh;
-  background-color: white;
-  pointer-events: none;
-  border-radius: 3vw;
-}
-#page3-slider-2{
-  position: absolute;
-  top: 64%;
-  right: -50%;
-  transform: translateY(-50%);
-  font-family: myFont2;
-  pointer-events: none;
-  color: white;
-  font-size: 8vw;
-  white-space: nowrap;
-  text-transform: capitalize;
 }
 #page4-heading-2 {
   font-size: 22vw;
@@ -1257,7 +1258,7 @@ nav {
 }
 
 #loader-counter {
-  font-size: 18vw;
+  font-size: 15vw;
   font-family: monospace;
   pointer-events: none;
   color: black;
